Update navigation sidebar and include pdf

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -82,37 +82,6 @@ remote_theme: "marburg-open-courseware/moer-template-jekyll"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 auto_ids: true
 
-# Default Settings
-collections_dir: units
-
-# Includes
-include:
-  - _pages
-
-# Collections
-collections:
-  examples:
-    output: true
-    permalink: /:collection/:title.html
-  unit01:
-    output: true
-    permalink: /:collection/:title.html
-  unit02:
-    output: true
-    permalink: /:collection/:title.html
-  unit03:
-    output: true
-    permalink: /:collection/:title.html
-  unit04:
-    output: true
-    permalink: /:collection/:title.html
-  unit05:
-    output: true
-    permalink: /:collection/:title.html
-  worksheets:
-    output: true
-    permalink: /:collection/:title.html
-
 # Default settings
 defaults:
   # examples
@@ -121,54 +90,60 @@ defaults:
       type: examples
     values:
       category: "examples"
+      tags: "Examples"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # unit01
   - scope:
       path: ""
       type: unit01
     values:
       category: "Unit 01"
+      tags: "Unit|01"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # unit02
   - scope:
       path: ""
       type: unit02
     values:
       category: "Unit 02"
+      tags: "Unit|02"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # unit03
   - scope:
       path: ""
       type: unit03
     values:
       category: "Unit 03"
+      tags: "Unit|03"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # unit04
   - scope:
       path: ""
       type: unit04
     values:
       category: "Unit 04"
+      tags: "Unit|04"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # unit05
   - scope:
       path: ""
       type: unit05
     values:
       category: "Unit 05"
+      tags: "Unit|05"
       layout: single
       sidebar:
-        nav: "docs" 
+        nav: "units" 
   # pages
   - scope:
       path: "_pages"
