--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@
 
 # Serve on GitHub
 url: https://marburg-open-courseware.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/moer-msc-data-analysis"
+baseurl: "/moer-msc-data-analysis/"
 
 
 ##### Title ###################################################################
