--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -53,7 +53,7 @@ author:
   flickr           : "https://www.flickr.com/environmentalinformatics-marburg/"
   facebook         : "https://www.facebook.com/GeographieMarburg/"
   foursquare       :
-  github           : "github.com/marburg-open-courseware"
+  github           : "marburg-open-courseware"
   gitlab           :
   google_plus      :
   keybase          :
