--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,10 @@ build-iPhoneSimulator/
 
 ## Environment normalization:
 /.bundle/
-/vendor/bundle
+/vendor/bundle/
+/docs/vendor/
 /lib/bundler/man/
+
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
