search + comment functionality unit4-4

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -55,6 +55,8 @@ author:
 
 
 ##### Site configuration ######################################################
+search: true
+
 title_separator: "|"
 excerpt_separator: <!--more-->
 
