--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -24,8 +24,8 @@ gem "github-pages", group: :jekyll_plugins
 # If you have any plugins, put them here!
 # moer: Add more plugins.
 group :jekyll_plugins do
-  gem "jekyll-feed"
-  #gem "jekyll-admin"
+  gem "jekyll-feed", "~> 0.6"
+  gem "jekyll-admin"
   gem "jekyll-paginate"
   gem "jekyll-sitemap"
   gem "jekyll-gist"
@@ -40,10 +40,8 @@ gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1.0" if Gem.win_platform?
 
-gem "rack", "~> 2.2"
-gem "webrick", "~> 1.7"
-gem "jekyll-admin", "~> 0.11.1"
-gem "sinatra-contrib", "~> 2.0"
-gem "rack-protection", "~> 2.0"
-gem "faraday-retry"
 
+
+gem "webrick", "~> 1.7"
+
+gem "faraday-retry"
